--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 version: '3.7'
 services:
   sonarqube:
@@ -6,15 +5,21 @@ services:
     ports:
       - "9000:9000"
     environment:
-      - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonar
+      - SONAR_JDBC_URL=jdbc:mysql://db:3306/sonar
+      - SONAR_JDBC_USERNAME=sonar
+      - SONAR_JDBC_PASSWORD=sonar
     depends_on:
       - db
+
   db:
-    image: postgres
+    image: mysql:8
     environment:
-      - POSTGRES_USER=sonar
-      - POSTGRES_PASSWORD=sonar
-      - POSTGRES_DB=sonar
+      - MYSQL_ROOT_PASSWORD=sonar
+      - MYSQL_DATABASE=sonar
+      - MYSQL_USER=sonar
+      - MYSQL_PASSWORD=sonar
+    ports:
+      - "3306:3306"
 
   prometheus:
     image: prom/prometheus
@@ -38,44 +43,3 @@ services:
     volumes:
       - /var/log:/var/log
     command: -config.file=/etc/promtail/config.yml
-=======
-version: '3.7'
-services:
-  sonarqube:
-    image: sonarqube:latest
-    ports:
-      - "9000:9000"
-    environment:
-      - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonar
-    depends_on:
-      - db
-  db:
-    image: postgres
-    environment:
-      - POSTGRES_USER=sonar
-      - POSTGRES_PASSWORD=sonar
-      - POSTGRES_DB=sonar
-
-  prometheus:
-    image: prom/prometheus
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
-
-  grafana:
-    image: grafana/grafana
-    ports:
-      - "3000:3000"
-
-  loki:
-    image: grafana/loki:2.9.0
-    ports:
-      - "3100:3100"
-
-  promtail:
-    image: grafana/promtail
-    volumes:
-      - /var/log:/var/log
-    command: -config.file=/etc/promtail/config.yml
->>>>>>> cbdace2609bddf46d9bc19fb9e3490e8a827ad09
