--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,17 +1,24 @@
-<<<<<<< HEAD
+# Global configuration
 global:
-  scrape_interval: 15s
+  scrape_interval: 15s  # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+  evaluation_interval: 15s  # Evaluate rules every 15 seconds. The default is every 1 minute.
+  # scrape_timeout is set to the global default (10s).
 
+# Scrape configurations
 scrape_configs:
-  - job_name: 'yourapp'
+  # Scrape Prometheus itself
+  - job_name: "prometheus"
     static_configs:
-      - targets: ['localhost:8000']
-=======
-global:
-  scrape_interval: 15s
+      - targets: ["localhost:9090"]  # Assuming Prometheus is running on localhost:9090
 
-scrape_configs:
-  - job_name: 'yourapp'
+  # Scrape Loki metrics
+  - job_name: "loki"
+    metrics_path: "/metrics"  # Loki's metrics endpoint
     static_configs:
-      - targets: ['localhost:8000']
->>>>>>> cbdace2609bddf46d9bc19fb9e3490e8a827ad09
+      - targets: ["loki:3100"]  # Replace with your Loki's address and port
+
+  # Scrape application metrics
+  - job_name: "application"
+    metrics_path: "/api/metrics"  # Your application metrics endpoint
+    static_configs:
+      - targets: ["localhost:3000"]  # Replace with your application's address and port
