--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,8 @@ jobs:
 
       - name: Run Tests
         run: |
-          pytest > test-result.log
+          docker run --rm -it -e SONAR_TOKEN="${{ secrets.SONAR_TOKEN }}" -v "%cd%:/usr/src" sonarsource/sonar-scanner-cli
+
 
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
