--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,10 +26,8 @@ jobs:
           pytest
 
       - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        run: |
+          docker run --rm -e SONAR_TOKEN="${{ secrets.SONAR_TOKEN }}" -e SONAR_HOST_URL="${{ secrets.SONAR_HOST_URL }}" -v "${{ github.workspace }}:/usr/src" sonarsource/sonar-scanner-cli
 
       - name: Build Docker Image
         run: |
