--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,15 +25,15 @@ jobs:
         run: |
           pytest
 
-      - name: SonarQube Scan
-        run: |
-          docker run --rm -e SONAR_TOKEN="${{ secrets.SONAR_TOKEN }}" -e SONAR_HOST_URL="${{ secrets.SONAR_HOST_URL }}" -v "${{ github.workspace }}:/usr/src" sonarsource/sonar-scanner-cli
+      # - name: SonarQube Scan
+      #   run: |
+      #     docker run --rm -e SONAR_TOKEN="${{ secrets.SONAR_TOKEN }}" -e SONAR_HOST_URL="${{ secrets.SONAR_HOST_URL }}" -v "${{ github.workspace }}:/usr/src" sonarsource/sonar-scanner-cli
 
       - name: Build Docker Image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-uas:latest .
 
-      - name: Push Docker Image
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker push ${{ secrets.DOCKER_USERNAME }}/devops-uas:latest
+      # - name: Push Docker Image
+      #   run: |
+      #     echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      #     docker push ${{ secrets.DOCKER_USERNAME }}/devops-uas:latest
