--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,9 +42,9 @@ services:
   promtail:
     image: grafana/promtail:latest
     volumes:
-      - ./promtail-config.yaml:/etc/promtail/promtail.yaml
+      - ./promtail-config.yml:/etc/promtail/promtail.yml
       - /var/log:/var/log
-    command: -config.file=/etc/promtail/promtail.yaml -config.expand-env
+    command: -config.file=/etc/promtail/promtail.yml -config.expand-env
     depends_on:
       - loki
     networks:
