--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,24 +1,16 @@
-# Global configuration
 global:
-  scrape_interval: 15s  # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 15s  # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
-# Scrape configurations
 scrape_configs:
-  # Scrape Prometheus itself
-  - job_name: "prometheus"
+  - job_name: 'prometheus'
     static_configs:
-      - targets: ["localhost:9090"]  # Assuming Prometheus is running on localhost:9090
+      - targets: ['localhost:9090']
 
-  # Scrape Loki metrics
-  - job_name: "loki"
-    metrics_path: "/metrics"  # Loki's metrics endpoint
+  - job_name: 'node_exporter_vps1'
     static_configs:
-      - targets: ["loki:3100"]  # Replace with your Loki's address and port
+      - targets: ['localhost:9100']
 
-  # Scrape application metrics
-  - job_name: "application"
-    metrics_path: "/api/metrics"  # Your application metrics endpoint
+  - job_name: 'cadvisor_vps1'
     static_configs:
-      - targets: ["localhost:3000"]  # Replace with your application's address and port
+      - targets: ['localhost:8081']
